[package]
name = "resettable"
version = "1.0.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"

[dependencies]
serde = { version = "1.0", optional = true }
resettable-derive = { path = "macros", optional = true }

[features]
derive = ["resettable-derive"]
